SQL updates are functional. Because commands are table-agnostic, errors might creep up e.g. character limits may be exceeded.